--- a/app/src/main/res/layout/activity_error_scan.xml
+++ b/app/src/main/res/layout/activity_error_scan.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:gravity="center"
-        android:text="异常件扫描"
+        android:text="扫描签收"
         android:textColor="#000000"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTitle" />
-
+   <!-- app:layout_constraintBottom_toTopOf="@id/etInputExpressNum"-->
     <cn.bingoogolapple.qrcode.zxing.ZXingView
         android:id="@+id/mZXingView"
         android:layout_width="0dp"
@@ -50,7 +50,6 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@id/etInputExpressNum"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
@@ -79,7 +78,15 @@
         app:layout_constraintEnd_toEndOf="@id/mZXingView"
         app:layout_constraintStart_toStartOf="@id/mZXingView"
         app:layout_constraintTop_toTopOf="@id/mZXingView" />
-
+    <ImageView
+        android:id="@+id/ivHandler"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="95dp"
+        android:src="@mipmap/ic_handler"
+        app:layout_constraintEnd_toEndOf="@id/mZXingView"
+        app:layout_constraintStart_toStartOf="@id/mZXingView"
+        app:layout_constraintTop_toTopOf="@id/mZXingView" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -109,7 +116,7 @@
         app:layout_constraintTop_toTopOf="@id/mZXingView" />
 
 
-    <EditText
+   <!-- <EditText
         android:id="@+id/etInputExpressNum"
         android:layout_width="300dp"
         android:layout_height="44dp"
@@ -136,7 +143,7 @@
         app:bl_solid_color="#DE1111"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etInputExpressNum" />
+        app:layout_constraintTop_toBottomOf="@id/etInputExpressNum" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
