--- a/app/src/main/res/layout/activity_sort_scan.xml
+++ b/app/src/main/res/layout/activity_sort_scan.xml
@@ -91,14 +91,22 @@
         app:layout_constraintEnd_toEndOf="@id/mZXingView"
         app:layout_constraintStart_toStartOf="@id/mZXingView"
         app:layout_constraintTop_toTopOf="@id/mZXingView" />
-
+    <ImageView
+        android:id="@+id/ivHandler"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="220dp"
+        android:src="@mipmap/ic_handler"
+        app:layout_constraintEnd_toEndOf="@id/mZXingView"
+        app:layout_constraintStart_toStartOf="@id/mZXingView"
+        app:layout_constraintTop_toTopOf="@id/mZXingView" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_scan_left_bottom"
         app:layout_constraintBottom_toBottomOf="@id/mZXingView"
         app:layout_constraintStart_toStartOf="@id/mZXingView" />
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
