--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -60,9 +60,10 @@
         android:background="@color/white"
         app:layout_constraintBottom_toTopOf="@id/tvLogout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTitleEnglish"
-        app:layout_constraintVertical_bias="0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/ivAvatar"
@@ -101,7 +102,37 @@
         app:layout_constraintStart_toEndOf="@id/ivAvatar"
         app:layout_constraintTop_toBottomOf="@id/tvName" />
 
-    <!-- 工号 -->
+    <ImageView
+        android:id="@+id/workOrder"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="264dp"
+        android:layout_marginTop="20dp"
+        android:src="@mipmap/work_order"
+        app:layout_constraintStart_toStartOf="@id/viewInputContainer"
+        app:layout_constraintTop_toTopOf="@id/viewInputContainer" />
+    <TextView
+        android:id="@+id/workOrderNum"
+        android:layout_width="25dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="294dp"
+        android:layout_marginTop="20dp"
+        android:text="1"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:gravity="center"
+        android:background="#FF0000"
+        android:orientation="vertical"
+        app:bl_corners_radius="30dp"
+        app:bl_solid_color="#DE1111"
+        android:shadowColor="#ff000000"
+        android:shadowRadius="10"
+        android:shadowDx="5"
+        android:shadowDy="5"
+        app:layout_constraintStart_toStartOf="@id/viewInputContainer"
+        app:layout_constraintTop_toTopOf="@id/viewInputContainer" />
+    <!-- 工号  android:visibility="gone"-->
+
     <ImageView
         android:id="@+id/viewWorkNumCard"
         android:layout_width="0dp"
