--- a/app/src/main/res/layout/item_work_order_task.xml
+++ b/app/src/main/res/layout/item_work_order_task.xml
@@ -256,7 +256,6 @@
         android:text="已收款 12元"
         android:textColor="#999999"
         android:textSize="14dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/tvMinePickUpExpress"
         app:layout_constraintTop_toBottomOf="@id/tvMinePickUpTime" />
     <TextView
@@ -271,7 +270,18 @@
         android:textSize="14dp"
         app:layout_constraintStart_toStartOf="@id/tvMinePickUpExpress"
         app:layout_constraintTop_toBottomOf="@id/tvMinePickUpPay" />
-
+    <TextView
+        android:id="@+id/tvIsTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="20dp"
+        android:includeFontPadding="false"
+        android:text="处理时效"
+        android:textColor="#999999"
+        android:textSize="14dp"
+        app:layout_constraintStart_toStartOf="@id/tvMinePickUpExpress"
+        app:layout_constraintTop_toBottomOf="@id/tvIsUrgent" />
     <!-- 自揽件group -->
     <androidx.constraintlayout.widget.Group
         android:id="@+id/groupMinePickUp"
